# sentinel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  storage_sqlite.py  test_jailbreak_defense.py  test_multiturn_detection.py  test_sentinel.py  test_storage_sqlite.py  test_threat_intel.py
.claude/agent-memory/oubliette-red-team/: MEMORY.md  sentinel_audit.md  sentinel_audit_2026_03_26.md
.github/workflows/: ci.yml
demos/: ollama_demo.py  quickstart.py
docs/: executive-summary.md  usage-guide.md
sentinel/: README.md  __init__.py  agent_policy.py  allama.py  auth_middleware.py  cef_logger.py  config.py  crewai.py  drift_monitor.py  dspy_integration.py  ensemble.py  fastapi.py  frameworks.py  haystack_integration.py  honey_ics.py  honey_services.py  langchain.py  langgraph.py  litellm.py  llamaindex.py  llm_judge.py  llm_providers.py  mcp_guard.py  mcp_honey.py  mcp_integration.py  mcp_scanner.py  mcp_server.py  ml_client.py  model_config.py  output_scanner.py  pattern_detector.py  pre_filter.py  rate_limiter.py  rbac.py  sanitizer.py  scanners.py  semantic_kernel.py  session.py  storage.py  tenant.py  (+1 more)
sentinel/llm_providers/: __init__.py  anthropic_provider.py  azure.py  bedrock.py  chat.py  factory.py  fallback.py  google.py  llamacpp.py  ollama.py  openai_compat.py  openai_provider.py  transformer.py
sentinel/storage/: __init__.py  base.py  factory.py  memory.py  sqlite.py
tests/: k6-perf-gate.js  test_allama_integration.py  test_cef_logger.py  test_decoy_isolation.py  test_drift_monitor.py  test_fail_open.py  test_honey_ics.py  test_honey_services.py  test_input_sanitization.py  test_integration.py  test_llm_providers.py  test_mcp_guard.py  test_mcp_honey.py  test_mcp_integration.py  test_mcp_scanner.py  test_mcp_server.py  test_migration.py  test_multiturn_detection.py  test_new_sdk_integrations.py  test_prefilter_blocking.py  test_scanners.py  test_sentinel.py  test_shield_integrations.py  test_shield_storage.py  test_tenant_rbac.py  test_threat_intel.py
threat_intel/: __init__.py  api.py  config.py  core.py  dashboard_views.py  feed_manager.py  ioc_extractor.py  mitre_mapper.py  stix_exporter.py  storage.py
threat_intel_data/stix_bundles/: test_bundle.json
